# Dynamic-Tutor

./: .gitignore  API_DOCUMENTATION.md  INSTALL.md  README.md  TEACHER_API_DOCUMENTATION.md  main.py  migrate_to_database.py  pyproject.toml  start_system.py  start_system_verbose.py  启动说明.md
backend/: api_server.py  api_server_new.py  api_server_restructured.py  backend.py  database.py  init_database.py  requirements.txt
backend/api/: README.md  __init__.py  database.py  diagnosis.py  knowledge_map.py  models.py  questions.py  stats.py  users.py  wrong_questions.py
backend/api/common/: __init__.py  database.py  system.py  users.py
backend/api/student/: __init__.py  diagnosis.py  knowledge_map.py  questions.py  recommendation.py  stats.py  wrong_questions.py
backend/api/teacher/: __init__.py  assignment_management.py  (+4 more)
data/: Makefile  create_tables.sql  deploy_data.sh  import_data.py  import_data_gailv.py  import_edges.py  learning_platform.db  my_database.db  questions.json  show_KG.py  simulate_student_data.py  user_progress.json
data/gnn_data/: export_mastery_data.py  user_mastery_data.csv
frontend/: README.md  README_NEW.md  TESTING_GUIDE.md  app.py  config.py
frontend/components/: __init__.py  login.py  question_practice.py
frontend/pages/: daily_tasks.py  free_practice.py  home.py  knowledge_map.py  self_assessment.py  wrong_questions.py
frontend/services/: __init__.py  api_service.py  mock_api_service.py
pages/: 今日任务.py  我的知识图谱.py  自由练习.py
test/: check_data_info.py  test_api.py  test_backend.py  test_database.py  test_separation.py
(+25 files in other folders)
