[project]
name = "unveiling-the-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "neo4j>=5.28.1",
    "pandas>=2.3.0",
    "python-multipart>=0.0.20",
    "pyvis>=0.3.2",
    "streamlit>=1.46.1",
    "streamlit-mermaid>=0.3.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
